# discord-color-bot

./: .env.example  Cargo.toml  readme.md
src/: db_helper.rs  main.rs  message_handler.rs  poise_boilerplate.rs
src/commands/: color.rs  default_roles.rs
