[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
palette = "0.7.6"
poise = "0.6.1"
regex = "1.12.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serenity = "0.12.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
